# ultra-rpi

./: .gitignore  README.md  pip.conf  pyproject.toml
config/: ultra_default.yaml
config/calibration_data/crp/v1.0/: analysis_config.yaml  fitting_protocol_sheet.xlsx  validation_rules_sheet.xlsx
config/calibration_data/quick_demo/v1.0/: analysis_config.yaml  fitting_protocol_sheet.xlsx  validation_rules_sheet.xlsx
deploy/: install.sh  ultra-rpi.service
docs/: ARCHITECTURE.md  OTA_design.md  README.md  carousel_angle_vision.md  cartridge_tube_validation.md  iam-ultra-config-rw.json  post_merge_pr1_alignment.md  recipe_s3.md
provisioning/: .gitignore
provisioning/certs/: .gitignore  claim.cert.pem  claim.private.key  claim.public.key
scripts/: cleanup_runs.sh  fetch_certs.sh  generate_aruco_markers.py  probe_markers_setup.sh  probe_markers_stream.py  probe_markers_stream.sh  seed_machine_settings.sh  seed_machine_settings_ultra1_6.sh  start.sh  stop.sh  upload_calibration_to_s3.sh  upload_certs_to_s3.sh  upload_recipes_to_s3.sh
src/sway/: __init__.py
src/sway/utils/: dollop_helpers.py
src/ultra/: __init__.py  __main__.py  app.py  config.py  events.py
src/ultra/analysis/: __init__.py  analyzer.py
src/ultra/gui/: __init__.py  _eng_state.py  api.py  api_config.py  api_egress.py  api_fc_sequence.py  api_firmware.py  api_protocol.py  api_stm32.py  server.py
src/ultra/gui/static/: app.js  index.html  style.css  ultra-charts.js  ultra-config.js  ultra-core.js  ultra-engineering.js  ultra-firmware.js  ultra-panels.js  ultra-run.js
src/ultra/hw/: __init__.py  camera.py  camera_singleton.py  frame_protocol.py  reader_interface.py  reader_mock.py  stm32_interface.py  stm32_mock.py  stm32_monitor.py
src/ultra/protocol/: __init__.py  models.py  recipe_loader.py  runner.py  state_tracker.py  steps.py
src/ultra/protocol/recipes/: _common.yaml  crp_ultra.yaml  crp_ultra_demo.yaml  crp_ultra_latest.yaml  crp_ultra_no_centrifuge.yaml  quick_demo.yaml  salt_ultra.yaml  tsh_ultra.yaml
src/ultra/reader/: __init__.py  acquisition.py  pipeline.py
src/ultra/services/: __init__.py  config_store.py  dollop_client.py  egress.py  egress_db.py  fw_update.py  fw_update_mcuboot.py  iot_client.py  nfc_service.py  run_data.py  s3_upload.py  state_machine.py  wifi_provisioner.py
src/ultra/services/iot_provisioning/: __init__.py  config.py  credential_manager.py  iot_client.py  provisioner.py
src/ultra/services/nfc_provisioning/: __init__.py  nfc_service.py  provisioner.py
src/ultra/services/wifi_provisioning/: __init__.py  ble_service.py  provisioner.py  wifi_manager.py
src/ultra/utils/: __init__.py  logging.py  network.py
src/ultra/vision/: __init__.py  align_runner.py  carousel_align.py  check_runner.py  dmtx_detect.py  qr_detect.py  tube_detect.py  tube_template.py
tests/gui/: test_persist_overlay.py
tests/services/: test_self_check_stages.py
tests/vision/: test_carousel_align.py  test_qr_detect.py  test_tube_detect.py  test_tube_template.py
