[project]
name = "ultra-rpi"
version = "0.1.0"
description = "RPi controller for Ultra STM32 blood-analysis hardware"
requires-python = ">=3.11"
dependencies = [
    "analysis-tools",
    "pyserial>=3.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "boto3>=1.34",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ultra"]

[tool.uv]
managed = true

[tool.uv.sources]
analysis-tools = { git = "ssh://git@github.com/siphox-inc/sway.git", branch = "main", subdirectory = "analysis_tools" }

[[tool.uv.index]]
name = "siphox"
url = "http://18.117.187.46:8082/"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
